--- a/src/components/map/styles.css
+++ b/src/components/map/styles.css
@@ -1,10 +1,16 @@
 h1 {
     text-align: center;
 }
+
 .leaflet-container {
-    left:10%;
-    width: 80%;
-    height: 100vh;
+    width: 100%;
+    height: 90vh;
+}
+@media only screen and (max-width: 420px) {
+    .leaflet-container {
+        width: 100%;
+        height: 300px;
+    }
 }
 path {
     stroke-width: 10;
