--- a/src/components/map/styles.css
+++ b/src/components/map/styles.css
@@ -1,4 +1,4 @@
-h1 {
+h1, h2 {
     text-align: center;
 }
 
@@ -18,3 +18,6 @@ path {
 .stop-baloon {
     text-align: center;
 }
+html {
+    scroll-behavior: smooth;
+  }
